# Magnetar

./: README.md  pyproject.toml  setup.py
magnetar/: Selenium_Crawler_Prototyping.ipynb  chromedriver_installation_linux.txt
magnetar/filehandling/: file_collection.py  file_reading.py
magnetar/fileprocessing/: file_analysis.py
magnetar/html/: testing.html
magnetar/scrapers/: selenium.py
scrapers/: selenium.py
