[build-system]
# Use setuptools backend (works well for broad compatibility with pip)
requires = [
    "csv",
    "fake_useragent",
    "setuptools>=61.0", 
    "wheel",
    "numpy",
    "pandas",
    "selenium",
    "webdriver_manager"
]
build-backend = "setuptools.build_meta"

[project]                     # PEP 621 metadata
name = "Magnetar"
version = "0.1.0"
description = "Tools for data ingestion"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Ryan Willett", email = "ryan.willett@gmail.com" }
]
license = { text = "MIT" }   # or use license-file = "LICENSE"
keywords = ["scraping", "ETL", "data"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]